functions rearranged. Need to remove spaces from sorted arrays

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="script.js"></script>
 
     <p>
-      se solicita que ingrese por teclado 10 números, el programa devolverá:
+      Se solicita que ingrese por teclado 10 números, el programa devolverá:
     </p>
 
     <ul>
@@ -19,5 +19,7 @@
       <li>3º Cuantos son pares</li>
     </ul>
     <input type="button" onclick="(ejecutar());" value="Empezar" />
+    <p class="result">Positvo y negativos:</p>
+    <p class="result-pares">Pares:</p>
   </body>
 </html>
