--- a/exercise2.html
+++ b/exercise2.html
@@ -11,10 +11,14 @@
 
     <p>
       Se solicitan 10 números enteros comprendidos entre 1 y 500, estos números
-      se almacenarán en un array. 1º Almacenar todos los números en un array 2º
-      Almacenar en otro array los números comprendidos entre el 1 y 250 3º
-      Almacenar en otro array los números comprendidos entre el 251 y 500
+      se almacenarán en un array. 
+      <ul><li>1º Almacenar todos los números en un array</li> <li>2º
+      Almacenar en otro array los números comprendidos entre el 1 y 250</li> <li>3º
+      Almacenar en otro array los números comprendidos entre el 251 y 500</li></ul>   
     </p>
-    <input type="button" onclick="(ejecutar2());" value="Empezar" />
+    <input type="button" onclick="(getNumbers());" value="Empezar" />
+    <p class="array1">Array todos los numeros: </p>
+    <p class="array2">Array 1 a 250: </p>
+    <p class="array3">Array 251 a 500: </p>
   </body>
 </html>
